--- a/app/src/main/res/drawable/background_button.xml
+++ b/app/src/main/res/drawable/background_button.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-<item>
-    <shape android:shape="rectangle">
-        <corners android:radius="@dimen/radius_size_5"/>
-        <padding android:bottom="@dimen/padding_10" android:left="@dimen/padding_10" android:right="@dimen/padding_10" android:top="@dimen/padding_10"/>
-        <solid android:color="@color/cor_verde"/>
-        <stroke android:color="@color/cor_verde"/>
-        <stroke android:width="@dimen/stroke_size_2dp"/>
-    </shape>
-</item>
+    <item>
+        <shape android:shape="rectangle">
+            <corners android:radius="@dimen/radius_size_5" />
+            <padding android:bottom="@dimen/padding_10" android:left="@dimen/padding_10" android:right="@dimen/padding_10" android:top="@dimen/padding_10" />
+            <solid android:color="@color/cor_verde" />
+            <stroke android:color="@color/cor_verde" />
+            <stroke android:width="@dimen/stroke_size_2dp" />
+        </shape>
+        <ripple android:color="@android:color/holo_green_light" />
+    </item>
 </selector>
