--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@style/TelaCheia"
-    tools:context=".ui.Splashscreen">
+    tools:context=".ui.view.main.Splashscreen">
 
 
     <ImageView
