--- a/app/src/main/res/layout/activity_lista_loterias.xml
+++ b/app/src/main/res/layout/activity_lista_loterias.xml
@@ -4,20 +4,21 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.view.listaloterias.ListaLoterias">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_lista_loterias"
         android:layout_width="0dp"
-        tools:listitem="@layout/item_loterias"
-        tools:itemCount="5"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/margin_20"
         android:layout_marginTop="@dimen/margin_40"
         android:layout_marginEnd="@dimen/margin_20"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:itemCount="10"
+        tools:listitem="@layout/item_loterias" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
