--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="@dimen/margin_20"
         android:layout_marginTop="@dimen/margin_40"
         android:layout_marginEnd="@dimen/margin_20"
-        android:text="Loterias"
+        android:text="Aumente sua Chance"
         app:icon="@drawable/ic_teste_splash"
         app:iconGravity="textStart"
         app:layout_constraintEnd_toEndOf="parent"
