--- a/app/src/main/res/layout/activity_lista_loterias.xml
+++ b/app/src/main/res/layout/activity_lista_loterias.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".ui.view.listaloterias.ListaLoterias">
+    tools:context=".ui.view.listaloterias.LoteriasLista">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_lista_loterias"
@@ -17,6 +17,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
         tools:itemCount="10"
         tools:listitem="@layout/item_loterias" />
 
