finalizando fluxo de telas

--- a/app/src/main/res/layout/activity_loteria_aumente_chance.xml
+++ b/app/src/main/res/layout/activity_loteria_aumente_chance.xml
@@ -6,9 +6,13 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.maischance.LoteriaMaisChanceActivity">
 
-    <FrameLayout
-        android:id="@+id/fl_loteria_aumente_chance"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+   <TextView
+       android:id="@+id/texto_teste_mais_chance"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
