--- a/app/src/main/res/layout/activity_loteria_resultado.xml
+++ b/app/src/main/res/layout/activity_loteria_resultado.xml
@@ -6,4 +6,28 @@
     android:layout_height="match_parent"
     tools:context=".ui.view.resultado.LoteriaResultadoActivity">
 
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_loteria_resultado"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:tabBackground="@drawable/selector_tabs"
+        app:tabGravity="fill"
+        app:tabIndicatorColor="@color/white"
+        app:tabMode="fixed"
+        app:tabSelectedTextColor="@color/black"
+        app:tabTextColor="@color/white" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager_loteria_resultado"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tab_loteria_resultado" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
