--- a/app/src/main/res/layout/item_loterias.xml
+++ b/app/src/main/res/layout/item_loterias.xml
@@ -2,7 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    style="@style/EstiloCard"
+    style="@style/EstiloCardListaMenuLoterias"
+    android:id="@+id/cardview_lista_tela_loterias"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:clickable="true"
