--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".ui.view.main.MainActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_20"
+        android:layout_marginTop="@dimen/margin_20"
+        android:layout_marginEnd="@dimen/margin_20"
+        android:layout_marginBottom="@dimen/margin_20">
+
 
         <!--<com.synnapps.carouselview.CarouselView
             android:id="@+id/carousel_proximos_sorteios"
@@ -21,277 +26,37 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintBottom_toTopOf="@+id/linha_menu_loterias"
             app:layout_constraintTop_toTopOf="parent"/>-->
-        <GridLayout
-            android:id="@+id/linha_menu_loterias"
+
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/main_recycler_menu_loterias"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/margin_20"
-            android:layout_marginTop="@dimen/margin_40"
-            android:layout_marginEnd="@dimen/margin_20"
-            android:columnCount="4"
-            android:rowCount="4"
-            android:useDefaultMargins="true"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/btn_listar_loterias"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <!--        aqui dentro vai as linhas do menu-->
-
-
-            <LinearLayout
-                android:id="@+id/menu_mega_sena"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/mega_sena" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/menu_lotofacil"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/lotofacil" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/menu_quina"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/quina" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/menu_lotomania"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/lotomania" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/menu_timemania"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/timemania" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/menu_dupla_sena"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/dupla_sena" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/menu_loteria_federal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="Loteria Federal" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/menu_dia_de_sorte"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/dia_de_sorte" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/menu_super_sete"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_columnWeight="1"
-                android:clickable="true"
-                android:focusable="true"
-                android:foreground="?android:attr/selectableItemBackground"
-                android:orientation="vertical">
-
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:contentDescription="@string/simbolo_loteria"
-                    android:src="@drawable/ic_teste_splash" />
-
-                <TextView
-                    style="@style/EstiloRotuloCampos"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:text="@string/super_sete" />
-
-            </LinearLayout>
-
-
-        </GridLayout>
+            app:layout_constraintTop_toTopOf="parent"
+            app:spanCount="4"
+            tools:itemCount="9"
+            tools:listitem="@layout/item_main_menu_loteria" />
 
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_listar_loterias"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:padding="@dimen/margin_20"
-            android:layout_marginStart="@dimen/margin_20"
             android:layout_marginTop="@dimen/margin_40"
-            android:layout_marginEnd="@dimen/margin_20"
+            android:padding="@dimen/margin_20"
             android:text="Aumente sua Chance"
             app:icon="@drawable/ic_teste_splash"
             app:iconGravity="textStart"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linha_menu_loterias" />
+            app:layout_constraintTop_toBottomOf="@+id/main_recycler_menu_loterias" />
+
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.core.widget.NestedScrollView>
+
+</ScrollView>
