--- a/app/src/main/res/layout/item_resultado_dezenas.xml
+++ b/app/src/main/res/layout/item_resultado_dezenas.xml
@@ -4,15 +4,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:paddingTop="@dimen/margin_10"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/resultado_item_dezenas"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:gravity="center"
+        android:background="@drawable/background_resultado_bola"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:text="1" />
+        tools:text="11" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
