--- a/app/src/main/res/layout/item_resultado_premiacoes.xml
+++ b/app/src/main/res/layout/item_resultado_premiacoes.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="@dimen/padding_10"
     android:paddingTop="@dimen/margin_10">
 
     <TextView
@@ -16,9 +17,8 @@
 
     <TextView
         android:id="@+id/resultado_item_txt_acertos"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/text1"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="15 pontos" />
@@ -34,10 +34,9 @@
 
     <TextView
         android:id="@+id/resultado_item_txt_vencedores"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_5"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/text2"
         app:layout_constraintTop_toBottomOf="@id/resultado_item_txt_acertos"
         tools:text="2" />
@@ -53,10 +52,9 @@
 
     <TextView
         android:id="@+id/resultado_item_txt_premio"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/margin_5"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/text3"
         app:layout_constraintTop_toBottomOf="@id/resultado_item_txt_vencedores"
         tools:text="R$ 1.617.835,87" />
