adicionando alteracoes a tela principal

--- a/app/src/main/res/layout/fragment_resultado.xml
+++ b/app/src/main/res/layout/fragment_resultado.xml
@@ -134,6 +134,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="Premiações"
+                    android:background="@drawable/background_textview"
                     android:textAllCaps="true"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
