--- a/app/src/main/res/drawable/background_textview.xml
+++ b/app/src/main/res/drawable/background_textview.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape android:shape="oval"
+<shape android:shape="rectangle"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <size android:width="40dp" android:height="40dp"/>
+
     <solid android:color="@android:color/transparent"/>
-    <stroke android:color="?attr/colorPrimary"
-        android:width="2dp"/>
+    <size android:height="1dp" android:width="1dp"/>
+    <stroke android:width="1dp" android:color="?attr/colorPrimary"/>
 
 </shape>
