--- a/app/src/main/res/layout/item_main_proximo_sorteio.xml
+++ b/app/src/main/res/layout/item_main_proximo_sorteio.xml
@@ -2,8 +2,8 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="300dp"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginStart="@dimen/margin_20"
     android:layout_marginEnd="@dimen/margin_20"
     app:cardElevation="5dp"
@@ -12,7 +12,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:padding="@dimen/padding_20"
-        android:layout_height="wrap_content">
+        android:layout_height="180dp">
 
         <TextView
             android:id="@+id/txt_nome_loteria_lista_proximo_sorteio"
